BUGFIX: Add explicit `0` z-index to `cms-content` so the menu toggle can render above it (#620)

--- a/client/src/styles/legacy/_style.scss
+++ b/client/src/styles/legacy/_style.scss
@@ -1281,6 +1281,7 @@ form.member-profile-form {
   .cms-content {
     background: $body-bg;
     height: 100%;
+    z-index: 0;
   }
 
   .cms-content-fields {
